# AIOOLL

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.gtihub/workflows/: ci.yml
docs/: community_benchmarks.md  hardware_optimization.md  linkedin_post.md
reports/: upgrade_26042025.md
scripts/: pull_models.sh  setup.sh
src/agents/: README.md  driver.py
src/agents/tests/: test_agents.py
src/agents/ui/: app.py
src/cv/: README.md  driver.py
src/cv/tests/: test_cv.py
src/cv/ui/: app.py
src/dl/: README.md  driver.py
src/dl/tests/: test_dl.py
src/dl/ui/: app.py
src/llm_inference/: README.md  driver.py
src/llm_inference/ui/: app.py
src/ml/: README.md  driver.py
src/ml/data/: house_prices.csv  sms_spam.csv
src/ml/tests/: test_ml.py
src/ml/ui/: app.py
src/rag/: README.md  driver.py
src/rag/knowledge_base/: ai_on_cpu.txt
src/rag/ui/: app.py
tests/: __init__.py  conftest.py  test_integration.py
